# gitstare

./: .gitignore  Cargo.toml  LICENSE  README.md  gitstare.md
gitstare/.claude/: settings.local.json
gitstare/src/: cache.rs  config.rs  main.rs  scanner.rs
src/: git.rs  lib.rs  main.rs  theme.rs
src/ui/: detail.rs  mod.rs  overview.rs
tests/: integration.rs  setup_test_repos.sh
